A few comments on the equations

--- a/ice_dynamics.ipynb
+++ b/ice_dynamics.ipynb
@@ -9,7 +9,20 @@
     "Toy model based on the Shallow Ice Approximation (SIA), mixing\n",
     "partial differential equations (PDEs), neural networks and model\n",
     "interpretation using SINDy.\n",
-    "=#"
+    "\n",
+    "The equation we are going to use is \n",
+    "\n",
+    "$$ \\frac{\\partial H}{\\partial t} = \\dot b + \\nabla \\cdot \\left( \\eta(u_b, H, S) \\, || \\nabla S ||^{n-1} \\nabla S \\right) $$\n",
+    "\n",
+    "with $\\eta$ the diffusivity factor given by\n",
+    "\n",
+    "$$ \\eta(u_b ,H) =  \\left( u_b + \\frac{2A}{n+2} H \\right) H^{n+1} (\\rho g)^n $$\n",
+    "\n",
+    "and\n",
+    "- $n$ the exponent in Glen's Law\n",
+    "- $A$ the deformation sliding factor in Glen's Law\n",
+    "- $u_b$ is the basal slip velocity (assumed to be zero)\n",
+    "- $\\dot b$ the mass balance (assumed to be zero)\n"
    ]
   },
   {
@@ -2536,6 +2549,13 @@
     "hm0 = plot(hm01,hm02,hm03, layout=(1,3), aspect_ratio=:equal, size=(1200,300))\n",
     "display(hm0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
