And now with splatting!
get_MB_train_dataset with splatting.

--- a/scripts/examples/ODINN_MB.ipynb
+++ b/scripts/examples/ODINN_MB.ipynb
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1036,7 @@
        "gen_MB_train_dataset (generic function with 1 method)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,13 +1062,13 @@
     "    for (season, balance) in zip(seasons, balances)\n",
     "        season_MB = mb_glaciological[balance].values\n",
     "        MB_clim = get_climate_forcing(gdir, climate, hydro_period, season)\n",
-    "        push!(ds_MB_buffer, season_MB) # add MB data into climate dataset for reference\n",
+    "        push!(ds_MB_buffer, season_MB) \n",
     "        push!(ds_clim_buffer, MB_clim)\n",
     "    end\n",
     "\n",
     "    # Store everything in a global dataset \n",
-    "    MB_ds = Dataset(ds_MB_buffer[1], ds_MB_buffer[2], ds_MB_buffer[3])\n",
-    "    climate_ds = Dataset(ds_clim_buffer[1], ds_clim_buffer[2], ds_clim_buffer[3])\n",
+    "    MB_ds = Dataset(ds_MB_buffer...) # splat it!!!\n",
+    "    climate_ds = Dataset(ds_clim_buffer...)\n",
     "\n",
     "    return MB_ds, climate_ds        \n",
     "end"
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1085,22 +1085,14 @@
      "text": [
       "Downloading climate data for glacier...\n",
       "Fetching mass balance reference data...\n",
-      "Processing data for reference period 1978-10-01 - 1999-09-30\n",
-      "ds_MB_buffer: "
+      "Processing data for reference period 1978-10-01 - 1999-09-30\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-10-08 18:04:39: MBsandbox.mbmod_daily_oneflowline: (RGI60-11.01450) process_w5e5_data\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Any[[-508.0, 624.0, -23.0, -362.0, -317.0, 180.0, -318.0, -814.0, -194.0, -791.0, -680.0, -941.0, -1106.0, -1511.0, -93.0, -271.0, -24.0, -448.0, -520.0, -1226.0, -502.0], [1007.0, 1340.0, 1004.0, 890.0, 1269.0, 989.0, 861.0, 950.0, 1263.0, 779.0, 737.0, 587.0, 751.0, 337.0, 932.0, 1180.0, 1318.0, 507.0, 863.0, 630.0, 929.0], [-1515.0, -716.0, -1027.0, -1252.0, -1586.0, -809.0, -1179.0, -1764.0, -1457.0, -1570.0, -1417.0, -1528.0, -1857.0, -1848.0, -1025.0, -1451.0, -1342.0, -955.0, -1383.0, -1856.0, -1431.0]]\n"
+      "2021-10-08 18:07:51: MBsandbox.mbmod_daily_oneflowline: (RGI60-11.01450) process_w5e5_data\n"
      ]
     },
     {
@@ -1166,7 +1158,7 @@
        "    author_info:     Open Global Glacier Model))"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
