--- a/scripts/keep_alive.ipynb
+++ b/scripts/keep_alive.ipynb
@@ -2,20 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c590f6f-5e79-45f4-b7ec-45eaef8098a8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "# to avoid a mistake keeping a server running for months on end\n",
-    "# adding costs to the cloud bill, avoid putting in 999999999999 etc.\n",
-    "time.sleep(3600*24)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7e7aa9ec-1d6e-4785-9c6a-2b0bf53e3584",
    "metadata": {},
    "outputs": [
@@ -41,8 +28,17 @@
       "\n",
       "Generating kernel output every minute for a 10 hours:\n",
       "\n",
-      "Hour 0: ..........................................................\n",
-      "Hour 1: ..............."
+      "Hour 0: ........................................................\n",
+      "Hour 1: ..........................................................\n",
+      "Hour 2: ............................................................\n",
+      "Hour 3: .........................................................\n",
+      "Hour 4: ..........................................................\n",
+      "Hour 5: ............................................................\n",
+      "Hour 6: ......................................................\n",
+      "Hour 7: ......................................................\n",
+      "Hour 8: ..........................................................\n",
+      "Hour 9: ..........................................................\n",
+      "Done generating kernel output!\n"
      ]
     }
    ],
