More docs improvements, especially on optimization, sensitivity and refs

--- a/docs/src/assets/references.bib
+++ b/docs/src/assets/references.bib
@@ -263,3 +263,66 @@
 	annote = {Comment: submitted to ACM SIGKDD 2018},
 	file = {arXiv Fulltext PDF:/Users/Bolib001/Desktop/Jordi/Bibliography/Zotero/storage/GMWFFUPM/Thuerey et al. - 2021 - Physics-based Deep Learning.pdf:application/pdf;arXiv.org Snapshot:/Users/Bolib001/Desktop/Jordi/Bibliography/Zotero/storage/NXEADTQ5/2109.html:text/html},
 }
+
+
+@article{welty_worldwide_2020,
+	title = {Worldwide version-controlled database of glacier thickness observations},
+	volume = {12},
+	issn = {1866-3508},
+	url = {https://essd.copernicus.org/articles/12/3039/2020/},
+	doi = {10.5194/essd-12-3039-2020},
+	abstract = {Although worldwide inventories of glacier area have been coordinated internationally for several decades, a similar effort for glacier ice thicknesses was only initiated in 2013. Here, we present the third version of the Glacier Thickness Database (GlaThiDa v3), which includes 3\&thinsp;854\&thinsp;279 thickness measurements distributed over roughly 3000 glaciers worldwide. Overall, 14\&thinsp;\% of global glacier area is now within 1\&thinsp;km of a thickness measurement (located on the same glacier) – a significant improvement over GlaThiDa v2, which covered only 6\&thinsp;\% of global glacier area and only 1100 glaciers. Improvements in measurement coverage increase the robustness of numerical interpolations and model extrapolations, resulting in better estimates of regional to global glacier volumes and their potential contributions to sea-level rise.
+
+ In this paper, we summarize the sources and compilation of glacier thickness data and the spatial and temporal coverage of the resulting database. In addition, we detail our use of open-source metadata formats and software tools to describe the data, validate the data format and content against this metadata description, and track changes to the data following modern data management best practices. Archived versions of GlaThiDa are available from the World Glacier Monitoring Service (e.g., v3.1.0, from which this paper was generated: https://doi.org/10.5904/wgms-glathida-2020-10; GlaThiDa Consortium, 2020), while the development version is available on GitLab (https://gitlab.com/wgms/glathida, last access: 9 November 2020).},
+	language = {English},
+	number = {4},
+	urldate = {2025-08-12},
+	journal = {Earth System Science Data},
+	author = {Welty, Ethan and Zemp, Michael and Navarro, Francisco and Huss, Matthias and Fürst, Johannes J. and Gärtner-Roer, Isabelle and Landmann, Johannes and Machguth, Horst and Naegeli, Kathrin and Andreassen, Liss M. and Farinotti, Daniel and Li, Huilin and GlaThiDa Contributors},
+	month = nov,
+	year = {2020},
+	note = {Publisher: Copernicus GmbH},
+	pages = {3039--3055},
+	file = {Welty et al_2020_Worldwide version-controlled database of glacier thickness observations.pdf:/Users/Bolib001/Desktop/Jordi/Bibliography/Zotero/Welty et al_2020_Worldwide version-controlled database of glacier thickness observations.pdf:application/pdf},
+}
+
+
+@article{millan_ice_2022,
+	title = {Ice velocity and thickness of the world’s glaciers},
+	volume = {15},
+	issn = {1752-0894, 1752-0908},
+	url = {https://www.nature.com/articles/s41561-021-00885-z},
+	doi = {10.1038/s41561-021-00885-z},
+	language = {en},
+	number = {2},
+	urldate = {2022-02-25},
+	journal = {Nature Geoscience},
+	author = {Millan, Romain and Mouginot, Jérémie and Rabatel, Antoine and Morlighem, Mathieu},
+	month = feb,
+	year = {2022},
+	pages = {124--129},
+}
+
+@article{rabatel_satellite-derived_2023,
+	title = {Satellite-{Derived} {Annual} {Glacier} {Surface} {Flow} {Velocity} {Products} for the {European} {Alps}, 2015–2021},
+	volume = {8},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2306-5729},
+	url = {https://www.mdpi.com/2306-5729/8/4/66},
+	doi = {10.3390/data8040066},
+	abstract = {Documenting glacier surface flow velocity from a longer-term perspective is highly relevant to evaluate the past and current state of glaciers worldwide. For this purpose, satellite data are widely used to obtain region-wide coverage of glacier velocity data. Well-established image correlation methods allow for the automated measurement of glacier surface displacements from satellite data (optical and radar) acquired at different dates. Although computationally expensive, image correlation is nowadays relatively simple to implement and allows two-dimensional displacement measurements. Here, we present a data set of annual glacier surface flow velocity maps at the European Alps scale, covering the period 2015–2021 at a 50 m × 50 m resolution. This data set has been quantified by applying the normalized cross-correlation approach on Sentinel-2 optical data. Parameters of the cross-correlation method (e.g., window size, sampling resolution) have been optimized, and the results have been validated by comparing them with in situ data on monitored glaciers showing an RMSE of 10 m/yr. These data can be used to evaluate glacier dynamics and its spatial and temporal evolution (e.g., quantify mass fluxes or calving) or can be used as an input for model calibration/validation or for the early detection of regional hazards associated with glacier destabilization.},
+	language = {en},
+	number = {4},
+	urldate = {2025-01-28},
+	journal = {Data},
+	author = {Rabatel, Antoine and Ducasse, Etienne and Millan, Romain and Mouginot, Jérémie},
+	month = apr,
+	year = {2023},
+	note = {Number: 4
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {mountain glaciers, European Alps, normalized cross correlation, optical remote sensing, Sentinel-2, surface flow velocity},
+	pages = {66},
+	file = {Rabatel et al_2023_Satellite-Derived Annual Glacier Surface Flow Velocity Products for the.pdf:/Users/Bolib001/Desktop/Jordi/Bibliography/Zotero/Rabatel et al_2023_Satellite-Derived Annual Glacier Surface Flow Velocity Products for the.pdf:application/pdf},
+}
+
+
