--- a/docs/src/assets/references.bib
+++ b/docs/src/assets/references.bib
@@ -325,4 +325,15 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {Rabatel et al_2023_Satellite-Derived Annual Glacier Surface Flow Velocity Products for the.pdf:/Users/Bolib001/Desktop/Jordi/Bibliography/Zotero/Rabatel et al_2023_Satellite-Derived Annual Glacier Surface Flow Velocity Products for the.pdf:application/pdf},
 }
 
+@article{Perego_Price_Stadler_2014,
+	title={Optimal initial conditions for coupling ice sheet models to Earth system models},
+	volume={119},
+	ISSN={2169-9003},
+	DOI={10.1002/2014jf003181},
+	number={9},
+	journal={Journal of Geophysical Research: Earth Surface}, 
+	author={Perego, Mauro and Price, Stephen and Stadler, Georg},
+	year={2014},
+	pages={1894–1917}
+}
 
